--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^3.20.0",
     "knex": "^0.19.1",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "pg": "^7.12.1",
     "valid-url": "^1.0.9",
     "winston": "^3.2.1",
